# biowatch

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REORGANIZATION.md  drizzle.config.js  drizzle.config.ts  electron-builder.yml  electron.vite.config.mjs  eslint.config.mjs  package-lock.json  package.json  playwright.config.js  tsconfig.json
docs/: README.md  architecture.md  data-formats.md  database-schema.md  dates-and-timezones.md  development.md  drizzle.md  http-servers.md  import-export.md  ipc-api.md  troubleshooting.md
python-environments/: README.md
python-environments/common/: Makefile  README.md  detection_utils.py  pyproject.toml  requirements.txt  run_deepfaune_server.py  run_manas_server.py  run_megadetector_server.py  run_speciesnet_server.py  utils.py  video_utils.py
python-environments/common/scripts/: download_model.py  predict.sh
python-environments/common/tests/: conftest.py  test_deepfaune_server.py  test_detection_utils.py  test_image_utils.py  test_manas_server.py  test_megadetector_server.py  test_speciesnet_server.py  test_utils.py
scripts/: afterPack.js  bench-seq-sql.mjs  build-common-names-dict.js  build-megadetector-tarball.py  build-species-info.js  build-species-info.lib.js  build-speciesnet-tarball.py  dev-debug.sh  explore-gbif-vernaculars.js  extract-speciesnet-labels.py  fps-media-table.mjs  profile-media-table.mjs  repro-seq-oom.mjs  rewrite-demo-dataset.js  theme-codemod.js  time-media-table.mjs
test/: cache-cleanup.test.js  camtrap-import.test.js  (+21 more)
(+618 files in other folders)
